# glstitcher

./: README.md  Readme  build.gradle  local.properties  settings.gradle
app/: CMakeLists - 副本.txt  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xiaoyi/sujin/glstitch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  StitchJNIWrapper.h  native-lib.cpp
app/src/main/cpp/esutil/Include/: esUtil.h
app/src/main/cpp/esutil/Source/: esShader.c  esShapes.c  esTransform.c  esUtil.c
app/src/main/cpp/esutil/Source/Android/: esUtil_Android.c
app/src/main/cpp/esutil/Source/Win32/: esUtil_win32.c
app/src/main/cpp/platform/android/: egl.cpp  gl_includes.h
app/src/main/cpp/stitcher/: ColorCorrector.cpp  ColorCorrector.h  DynamicLibrary.cpp  DynamicLibrary.h  FormatConverter.cpp  FormatConverter.h  FormatConverterFactory.cpp  FormatConverterFactory.h  GLStitcher.cpp  GLStitcher.h  GraphicBuffer.cpp  GraphicBuffer.h  ImageStitcher.cpp  ImageStitcher.h  MapPointsBuilder.cpp  MapPointsBuilder.h  MaskMaker.cpp  MaskMaker.h  MemTransfer.cpp  MemTransfer.h  MemTransferAndroid.cpp  MemTransferAndroid.h  MemTransferFactory.cpp  MemTransferFactory.h  NVCopyConverter.cpp  NVCopyConverter.h  NVToYUV444Converter.cpp  NVToYUV444Converter.h  PackedCopyConverter.cpp  PackedCopyConverter.h  ParamReader.cpp  ParamReader.h  StitchJNIWrapper.cpp  TexMapBuilder.cpp  TexMapBuilder.h  VertexBuilder.cpp  VertexBuilder.h  YUV444ToNVConverter.cpp  YUV444ToNVConverter.h  common.h  (+3 more)
app/src/main/cpp/stitcher/config/: stitch_param.xml
app/src/main/cpp/tinyxml2/: .gitignore  Makefile  readme.md
app/src/main/java/com/sujin/glstitch/: MainActivity.java  StitchJNIWrapper.java
app/src/main/java/com/xiaoyi/sujin/glstitch/: MainActivity.java  StitchJNIWrapper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xiaoyi/sujin/glstitch/: ExampleUnitTest.java
data/config/: stitch_param.xml
gradle/wrapper/: gradle-wrapper.properties
